@@ -4,7 +4,7 @@ Suite: squeeze
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
 MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
-MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
+MirrorsFile: Debian.mirrors
 _Description: Debian 6.0 'Squeeze' 
 Component: main
 _CompDescription: Officially supported
@@ -29,7 +29,7 @@ Suite: lenny
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
 MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
-MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
+MirrorsFile: Debian.mirrors
 _Description: Debian 5.0 'Lenny' 
 Component: main
 _CompDescription: Officially supported
@@ -54,7 +54,7 @@ Suite: etch
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
 MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
-MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
+MirrorsFile: Debian.mirrors
 _Description: Debian 4.0 'Etch'
 Component: main
 _CompDescription: Officially supported
@@ -79,7 +79,7 @@ Suite: sarge
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
 MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
-MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
+MirrorsFile: Debian.mirrors
 _Description: Debian 3.1 'Sarge'
 Component: main
 _CompDescription: Officially supported
@@ -104,7 +104,7 @@ Suite: stable
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
 MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
-MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
+MirrorsFile: Debian.mirrors
 _Description: Debian current stable release
 Component: main
 _CompDescription: Officially supported
@@ -117,7 +117,7 @@ Suite: testing
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
 MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
-MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
+MirrorsFile: Debian.mirrors
 _Description: Debian testing
 Component: main
 _CompDescription: Officially supported
@@ -130,7 +130,7 @@ Suite: sid
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
 MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
-MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
+MirrorsFile: Debian.mirrors
 _Description: Debian 'Sid' (unstable)
 Component: main
 _CompDescription: Officially supported
@@ -143,7 +143,7 @@ Suite: unstable
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
 MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
-MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
+MirrorsFile: Debian.mirrors
 _Description: Debian 'Sid' (unstable)
 Component: main
 _CompDescription: Officially supported
